--- a/Jardines2022.Servicios/Jardines2022.Servicios.csproj
+++ b/Jardines2022.Servicios/Jardines2022.Servicios.csproj
@@ -51,11 +51,11 @@
     <Compile Include="Servicios\IServicios\IProductoServicio.cs" />
     <Compile Include="Servicios\IServicios\IProveedorServicio.cs" />
     <Compile Include="Servicios\IServicios\IUsuarioServicio.cs" />
-    <Compile Include="Servicios\IServicios\UsuarioServicio.cs" />
     <Compile Include="Servicios\PaisesServicio.cs" />
     <Compile Include="Servicios\PersonaServicio.cs" />
     <Compile Include="Servicios\ProductoServicio.cs" />
     <Compile Include="Servicios\ProveedorServicio.cs" />
+    <Compile Include="Servicios\UsuarioServicio.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
