--- a/Jardines2022.Web/Jardines2022.Web.csproj
+++ b/Jardines2022.Web/Jardines2022.Web.csproj
@@ -1384,9 +1384,12 @@
     <Content Include="Views\Ciudad\Delete.cshtml" />
     <Content Include="Views\Acceso\LogIn.cshtml" />
     <Content Include="Views\Acceso\Registrarse.cshtml" />
+    <Content Include="Views\Acceso\RecuperarCuenta.cshtml" />
+    <Content Include="Views\Acceso\CambiarClave.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Shop\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
