--- a/Jardines2022.Web/Jardines2022.Web.csproj
+++ b/Jardines2022.Web/Jardines2022.Web.csproj
@@ -1386,6 +1386,7 @@
     <Content Include="Views\Acceso\Registrarse.cshtml" />
     <Content Include="Views\Acceso\RecuperarCuenta.cshtml" />
     <Content Include="Views\Acceso\CambiarClave.cshtml" />
+    <Content Include="Views\Acceso\ConfiguracionCuenta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
