Listado de Productos en la Tienda

--- a/Jardines2022.Entidades/Jardines2022.Entidades.csproj
+++ b/Jardines2022.Entidades/Jardines2022.Entidades.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dtos\CiudadListDto.cs" />
+    <Compile Include="Dtos\ProductoListDto.cs" />
     <Compile Include="Dtos\UsuarioListDto.cs" />
     <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\Ciudad.cs" />
