--- a/Jardines2022.Web/Jardines2022.Web.csproj
+++ b/Jardines2022.Web/Jardines2022.Web.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\PaisesController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
+    <Compile Include="Controllers\TiendaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1387,6 +1388,7 @@
     <Content Include="Views\Acceso\RecuperarCuenta.cshtml" />
     <Content Include="Views\Acceso\CambiarClave.cshtml" />
     <Content Include="Views\Acceso\ConfiguracionCuenta.cshtml" />
+    <Content Include="Views\Tienda\Tienda.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
