--- a/Jardines2022.Entidades/Jardines2022.Entidades.csproj
+++ b/Jardines2022.Entidades/Jardines2022.Entidades.csproj
@@ -44,9 +44,9 @@
     <Compile Include="Dtos\CiudadListDto.cs" />
     <Compile Include="Dtos\ProductoListDto.cs" />
     <Compile Include="Dtos\UsuarioListDto.cs" />
+    <Compile Include="Entidades\Carrito.cs" />
     <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\Ciudad.cs" />
-    <Compile Include="Entidades\Persona.cs" />
     <Compile Include="Entidades\DetalleOrden.cs" />
     <Compile Include="Entidades\Orden.cs" />
     <Compile Include="Entidades\Pais.cs" />
