--- a/Jardines2022.Servicios/Jardines2022.Servicios.csproj
+++ b/Jardines2022.Servicios/Jardines2022.Servicios.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,17 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicios\CarritoServicio.cs" />
     <Compile Include="Servicios\CategoriaServicio.cs" />
     <Compile Include="Servicios\CiudadServicio.cs" />
+    <Compile Include="Servicios\IServicios\ICarritoServicio.cs" />
     <Compile Include="Servicios\IServicios\ICategoriaServicio.cs" />
     <Compile Include="Servicios\IServicios\ICiudadServicio.cs" />
     <Compile Include="Servicios\IServicios\IPaisesServicio.cs" />
-    <Compile Include="Servicios\IServicios\IPersonaServicio.cs" />
     <Compile Include="Servicios\IServicios\IProductoServicio.cs" />
     <Compile Include="Servicios\IServicios\IProveedorServicio.cs" />
     <Compile Include="Servicios\IServicios\IUsuarioServicio.cs" />
     <Compile Include="Servicios\PaisesServicio.cs" />
-    <Compile Include="Servicios\PersonaServicio.cs" />
     <Compile Include="Servicios\ProductoServicio.cs" />
     <Compile Include="Servicios\ProveedorServicio.cs" />
     <Compile Include="Servicios\UsuarioServicio.cs" />
